style.css
@font-face {
    font-family: 'HERAHUGHES';
    src: local('HERAHUGHES'), url('https://github.com/buurtijs/buurtijsweb-archive/blob/main/font/HERAHUGHES.ttf') format('truetype'),
    url('font/herahughes-webfont.woff2') format('woff2'),
    url('font/herahughes-webfont.woff') format('woff');
}

html, body {
  margin: 0;
  padding: 0;
  font-family: HERAHUGHES, regular;
  color: white;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: auto;
  background-color: rgba(33, 33, 33, 1);
  width: 100vw;
  max-width: 100vw !important;
  overflow-x: hidden;
    overflow-y: hidden;

}

button {
  background-color: #4CAF50; /* Green */
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  z-index:3;
  position: absolute;
  bottom: 0px;
}


img{
  z-index:3;
  padding:3%;
}

a, h1, p {
  padding-left: 3%;
  padding-right: 3%;
   text-decoration: none;
}


a.paymentlink {
  /* background-color: #f44336; */
  color: #16A86D;
  font-size: 25px;
 text-decoration: underline;
}

@media only screen and (max-width: 600px) {
  button {
    position: fixed;
    bottom:0px;
    background-color: lightblue;
    z-index:3;
  }

  canvas {
    display: block;
    position:absolute;
    z-index:2;
    overflow-x: hidden;
      overflow-y: hidden;
  }


}

* {
  font-family: HERAHUGHES, regular;
  color: white;
}

canvas {
  display: block;
  position:absolute;
  z-index:2;
}

.layerClass{
  opacity: 1;
  transform: translate(-50%, -50%);
  position:absolute;
  z-index:1;
}

#wage, #xtubs {
  background-color: rgba(250,250,250,0.9);
  border: 1px dotted red;
  padding: 3px;
border-radius: 40px;
color: rgba(33, 33, 33, 1);
  /* background: url("./images/yellow ring back.png");
  background-repeat: no-repeat;
 background-size: 100% 100%; */
}

#tubmins, #onetub, #twotub, #threetub, #xtub {
  color: rgba(33,33,33,1);
}

.paymenttext {
    color: rgba(33, 33, 33, 1);
    padding-left: 35px;
}

#paymentbox {
  width: 220px;
  height: 190px;
    padding: 20px;
  background: url("./images/yellow blob.png");
  background-repeat: no-repeat;
 background-size: 100% 100%;
}

.solidaritypopHide {
  width:0px;
  overflow: hidden;
text-overflow: clip;
}

.solidaritypop {
  position: fixed;
  top: 200px;
  left: 2%;
  width: 95%;
  background: #16A86D;

  /* Below is the green bubble draft */
  /* background: url("./images/green-blob.png");
  background-repeat: no-repeat;
 background-size: 100% 100%;
   padding: 20px; */
}

